[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
renderer = { path = "../renderer" }
ecs_world = { path = "../ecs_world" }
editor = { path = "../editor" }
winit = { version = "0.30", features = ["rwh_06"] }
flecs_ecs = "0.2.2"
wgpu = "29.0"
pollster = "0.4"
bytemuck = { version = "1.21", features = ["derive"] }
egui = "0.34"
egui-wgpu = "0.34"
